--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "devDependencies": {
         "@headlessui/react": "^2.2.9",
         "@inertiajs/react": "^2.0.0",
-        "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
         "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
+        "esbuild-wasm": "^0.25.11",
         "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.4.31",
+        "postcss": "^8.5.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
-        "vite": "^7.0.7"
+        "tailwindcss": "^3.4.18",
+        "vite": "^7.1.12"
     },
     "dependencies": {
         "lucide-react": "^0.548.0"
