--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "name": "School Management System",
     "short_name": "SchoolMS",
     "description": "Islamic School Management System following Kenyan CBC Curriculum",
-    "start_url": "/login",
+    "start_url": "/dashboard",
     "display": "standalone",
     "background_color": "#0b1a34",
     "theme_color": "#f97316",
