--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^7.1.12"
     },
     "dependencies": {
-        "lucide-react": "^0.548.0"
+        "lucide-react": "^0.548.0",
+        "react-swipeable": "^7.0.2"
     }
 }
