structured the quran tracking feature, orginized the files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+/GUARDIAN_FEE_PREFERENCE_SYSTEM_EXPLAINED.md
+/GUARDIAN_FEE_SYSTEM_QUICK_REFERENCE.md
+schoolMS/README_FEE_SYSTEM.md
