--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-google-calendar": "^3.8",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
